--- a/functional/ping-gateway.yaml
+++ b/functional/ping-gateway.yaml
@@ -10,6 +10,6 @@ metadata:
 
 run:
         steps:
-                - lava-test-case first-try --result pass
+                - ./functional/ping-gateway.sh -c 15
 
 
